--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <div class="cardinfo">
       <div class="cardanime">
         <div class="animeimg">
-          <img src="./img/anime/box.png" alt="" />
+          <img src="./img/anime/ext.png" alt="" />
+        </div>
+        <div class="stickanime">
+          <img class="stickyimg" src="./img/anime/sticky.png" alt="" />
         </div>
       </div>
       <div class="card">
-        <img class="cimg" src="" alt="" />
+        <img class="cimg" src="" alt="運勢" />
+        <div class="bg"></div>
+        <div class="bgshiny"></div>
       </div>
     </div>
     <button class="extrac">抽卡</button>
