update new images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="cardinfo">
+      <div class="infobg"></div>
       <div class="cardanime">
         <div class="animeimg">
           <img src="./img/anime/ext.png" alt="" />
