--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
       </div>
     </div>
     <button class="extrac">抽卡</button>
+    <div class="sakura"></div>
+    <div class="sakura2"></div>
+    <div class="sakura3"></div>
+    <div class="sakura4"></div>
+    <div class="sakura5"></div>
+    <div class="cld"></div>
+    <div class="cld2"></div>
+    <div class="cld3"></div>
     <script src="./app.js"></script>
   </body>
 </html>
