--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="bgshiny"></div>
       </div>
     </div>
-    <button class="extrac">抽卡</button>
+    <button class="extrac">抽籤</button>
     <div class="sakura"></div>
     <div class="sakura2"></div>
     <div class="sakura3"></div>
